--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,10 @@ body {
     color: #333;
 }
 
+.carousel__slide .visible {
+    opacity: 1;
+}
+
 
 /**********************Navbar************************/
 
@@ -121,6 +125,7 @@ body {
 .carousel {
     position: relative;
     height: 500px;
+    overflow: hidden;
 }
 
 .carousel__control--left {
@@ -160,6 +165,8 @@ body {
     width: 100%;
     height: 100%;
     position: absolute;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
 }
 
 .carousel__slide img {
