--- a/css/styles.css
+++ b/css/styles.css
@@ -173,6 +173,7 @@ body {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    object-position: top;
 }
 
 .carousel__caption {
@@ -196,6 +197,7 @@ body {
     border-radius: 50%;
     background-color: transparent;
     border: .5px solid #fff;
+    cursor: pointer;
 }
 
 .carousel__title {
