--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,10 @@
 /****************Pre styling***************/
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-:root {}
+:root {
+    --lightBlue: #0BBED1;
+    --backgroundBlue: #E8FFFF;
+}
 
 * {
     padding: 0;
@@ -36,7 +39,8 @@ p {
 /********************Utilities**********************/
 
 .container {
-    max-width: 1366px;
+    max-width: 1406px;
+    padding: 0 20px;
     margin: auto;
     height: 100%;
 }
@@ -47,8 +51,16 @@ p {
     align-items: center;
 }
 
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    column-gap: 40px;
+}
+
 .nav .flex {
     justify-content: space-between;
+    background-color: #fff;
 }
 
 .btn {
@@ -69,6 +81,11 @@ p {
 .btn-primary {
     background-color: #0BBED1;
     color: #fff;
+    margin-top: 30px;
+}
+
+.btn-primary:hover {
+    background-color: #0bafc2;
 }
 
 .btn-outline-white:hover {
@@ -82,11 +99,14 @@ p {
 
 .flex-item {
     flex: 1;
-    min-width: 500px;
 }
 
 .padding {
     padding-top: 100px;
+}
+
+.margin {
+    margin-top: 100px;
 }
 
 
@@ -94,6 +114,8 @@ p {
 
 .nav {
     height: 80px;
+    position: relative;
+    z-index: 99;
 }
 
 .nav__logo {
@@ -252,10 +274,149 @@ p {
 /****************Two columns welcome section***************/
 
 .welcome .flex {
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
+    gap: 60px;
+}
+
+.welcome .flex-item {
+    min-width: 330px;
+}
+
+.welcome__title {
+    font-size: 2.5rem;
+    line-height: 1;
 }
 
 .welcome__text {
-    margin-right: 30px;
-    font-size: 23px;
+    font-size: 1.2rem;
+}
+
+
+/*****************Three column section cards******************/
+
+.disocveries {
+    background-color: var(--backgroundBlue);
+}
+
+.card {
+    background-color: #fff;
+    box-shadow: 1px 1px 10px #333;
+}
+
+.card h3 {
+    margin-top: 10px;
+    font-size: 25px;
+}
+
+.card__body {
+    height: 230px;
+}
+
+.card__footer {
+    padding: 0 25px;
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.nav__hamburger {
+    display: none;
+    cursor: pointer;
+    height: 40px;
+}
+
+.nav__hamburger:hover {
+    transform: scale(1.1);
+}
+
+.nav__hamburger img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+@media screen and (max-width:1070px) {
+    .welcome__title {
+        font-size: 2rem;
+    }
+    .welcome__text {
+        font-size: 1rem;
+    }
+    .disocveries .grid {}
+}
+
+@media screen and (max-width:768px) {
+    .nav .flex {
+        display: block;
+    }
+    .nav__item {
+        display: block;
+        padding: 20px;
+        text-align: center;
+        border-bottom: 1px solid #ddd;
+    }
+    .nav {
+        height: 60px;
+        position: sticky;
+        top: 0;
+        box-shadow: 3px 0 10px #000;
+    }
+    .mobile-flex {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        height: 100%;
+    }
+    .nav__hamburger {
+        display: inline-block;
+    }
+    .nav__menu {
+        display: block;
+        background-color: #E8FFFF;
+        width: 100%;
+        position: absolute;
+        z-index: -1;
+        left: 0;
+        top: -60px;
+        padding-top: 120px;
+        transform: translateY(-100%);
+        transition: transform ease 1s;
+    }
+    .carousel__indicators {
+        display: none;
+    }
+    .carousel__control--left,
+    .carousel__control--right {
+        display: none;
+    }
+    .display-menu {
+        transform: translateY(0%);
+    }
+    .nav__button {
+        margin-left: 0;
+    }
+    .carousel__title,
+    .welcome__title {
+        font-size: 1.6rem;
+    }
+    .carousel__text,
+    .welcome__text {
+        font-size: 1rem;
+    }
+    .btn {
+        padding: 15px 25px;
+    }
+}
+
+@media screen and (max-width:550px) {
+    .carousel__container-inner {
+        text-align: center;
+        width: 100%;
+    }
+    .carousel__slide img {
+        filter: brightness(.6);
+    }
 }
