--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,7 @@ p {
     font-size: var(--textSize);
     font-weight: 400;
     font-size: 1.2rem;
-    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .pt-15 {
@@ -354,6 +354,14 @@ body {
 .welcome .flex {
     flex-wrap: wrap-reverse;
 }
+.welcome__image img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+}
+.welcome__image{
+    height:500px;
+}
 
 /*****************Three column section cards******************/
 
@@ -484,10 +492,17 @@ padding-bottom:35px;
     .footer .grid{
         grid-column-gap:40px;
     }
+    .flex{
+        gap:40px;
+    }
 }
 
 @media screen and (max-width:834px){
-    
+   /* .welcome__image img{
+        width:auto;
+        height:auto;
+        object-fit:fill;
+    }*/
     .footer .grid {
         grid-template-rows:1fr 1fr 1fr 100px;
         grid-template-columns:1fr;
