--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,7 @@ ul {
 }
 
 h1,
+h2,
 h3,
 p {
     margin: 10px 0;
@@ -75,6 +76,15 @@ p {
 .flex-item {
     flex: 1;
     min-width: 330px;   
+}
+
+.img-cover img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+}
+.img-cover{
+    height:500px;
 }
 
 .grid {
@@ -248,7 +258,6 @@ body {
 .carousel {
     position: relative;
     height: 500px;
-    
 }
 
 .carousel__control--left {
@@ -282,7 +291,7 @@ body {
     height: 100%;
 }
 
-.carousel__slide li {
+.main-carousel li {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -290,7 +299,7 @@ body {
     transition: opacity 1s ease-in-out;
 }
 
-.carousel__slide img {
+.carousel__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -379,18 +388,13 @@ body {
     font-size: 14px;
 }
 
-.card__body {
-    height: 260px;
+
+.card__body img{
+    width:100%;
 }
 
 .card__footer {
     padding: 0 25px;
-}
-
-.card img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 
 .nav__hamburger {
@@ -428,24 +432,21 @@ body {
     height: 100%;
 }
 
-/******************News carousel********************/
-
-.news .carousel{
-    height:600px;
-}
-
-.carousel__image{
-    height:100%;
-}
-
 .background {
     background-image: url(../img/micro.jpg);
     background-attachment: fixed;
+    background-size:cover;
+    background-position:center;
     height: 100%;
-    height: 100%;
-    object-fit: cover;
+    width:100%;
 }
 
+
+@media screen and (max-width:1406px){
+ .news__img{
+     
+ }   
+}
 
 /********************Footer************************/
 
@@ -454,7 +455,6 @@ body {
     background-color:#043439;
     color:#fff;
     padding-top:70px;
-
 }
 
 .footer .grid{
@@ -482,6 +482,8 @@ padding-bottom:35px;
     border-bottom:2px solid #fafafa;
 }
 
+
+
 @media screen and (max-width:1070px) {
     .title{
         font-size:2rem;
@@ -498,11 +500,6 @@ padding-bottom:35px;
 }
 
 @media screen and (max-width:834px){
-   /* .welcome__image img{
-        width:auto;
-        height:auto;
-        object-fit:fill;
-    }*/
     .footer .grid {
         grid-template-rows:1fr 1fr 1fr 100px;
         grid-template-columns:1fr;
@@ -515,9 +512,7 @@ padding-bottom:35px;
     .grid {
         grid-template-columns: 1fr;
     }
-    .card__body {
-        height: 300px;
-    }
+    
     .nav .flex {
         display: block;
     }
@@ -589,6 +584,7 @@ padding-bottom:35px;
     .carousel__slide img {
         filter: brightness(.6);
     }
+    
 }
 
 @media screen and (max-width:550px) {
