--- a/css/styles.css
+++ b/css/styles.css
@@ -460,7 +460,7 @@ body {
 .footer .grid{
     grid-column-gap:150px;
     grid-row-gap:0;
-    grid-template-rows: 1fr 75px;
+    grid-template-rows: 1fr;
 }
 
 .grid-item{
@@ -470,7 +470,7 @@ padding-bottom:35px;
 .subfooter{
     background-color:#043439;
     border-top:1px solid #fafafa;
-    grid-column:1/4;
+    padding:30px;
 }
 
 .footer__logo{
@@ -480,6 +480,12 @@ padding-bottom:35px;
 
 .footer__border{
     border-bottom:2px solid #fafafa;
+}
+
+.footer__img{
+    cursor:pointer;
+    width:25px;
+    margin:0 10px;
 }
 
 
@@ -501,7 +507,7 @@ padding-bottom:35px;
 
 @media screen and (max-width:834px){
     .footer .grid {
-        grid-template-rows:1fr 1fr 1fr 100px;
+        grid-template-rows:1fr 1fr 1fr;
         grid-template-columns:1fr;
     }
 
