--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,6 @@
     --textSize: 1.2rem;
     --textSize-2: .9rem;
     --titleSize-2: 1.3rem;
-    
 }
 
 * {
@@ -184,6 +183,15 @@ p {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+}
+
+.bold{
+    font-weight:bold;
+}
+
+.bk-white{
+    background-color:#fff;
+    border-radius:10px;
 }
 
 
