--- a/css/tests.css
+++ b/css/tests.css
@@ -1,7 +1,3 @@
-body{
-    background-color:#efefef;
-}
-
 .welcome-image{
     height:500px;
     position:relative;
@@ -32,10 +28,6 @@ body{
 
 .breadcrumb__list li{
     display:inline-block;
-}
-
-.search{
-    padding-top:100px;
 }
 
 .search .flex{
@@ -100,6 +92,25 @@ body{
     color:#0092A1;
     font-size:1.2rem;
 }
+/***************Breadcrumb******************/
+
+.breadcrumb{
+    padding-top:20px;
+}
+
+/********Title section***********/
+.title__section{
+    text-align:center;
+    padding-top:100px;
+}
+
+/**************Welcome section***************/
+
+.welcome-section{
+    padding-top:50px;
+}
+
+
 
 @media screen and (max-width:768px){
     .tests__table{
