--- a/css/utilities/utilities.css
+++ b/css/utilities/utilities.css
@@ -1,72 +1,62 @@
-/*******************INDEX******************
-
-1. Pre styles.
-2. Utilities (Classes that we reuse).
-3. Navbar styling.
-4. Carousel styling.
-5. Two column section styling.
-6. Three column section styling. 
-7. Fixed background.
-8. News carousel.
+/******************INDEX************************/
+/*
+1. Import fonts and variables.
+2. Flex styling.
+3. Grid styling.
+4. Img styling.
+5. Layout and spacing styling.
+6. Box and button styling.
+7. Navbar.
+8. Carousel.
 9. Footer.
-10. Media queries (RWD).
-
+10. Media query 1070px.
+11. Media query 834px. 
 */
 
 
-/****************Pre styling***************/
+/*******************Import fonts and variables******************/
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-:root {
-    --primaryBlue: #0BBED1;
-    --transparentWhite: rgba(255, 255, 255, .96);
-    --fontColor: #333;
-    --titleSize: 2.5rem;
-    --textSize: 1.2rem;
-    --textSize-2: .9rem;
-    --titleSize-2: 1.3rem;
+@import 'variables.css';
+@import 'prestyles.css';
+
+
+
+/*************Text styling****************/
+
+.title {
+    font-size: var(--titleSize);
+    line-height: 1;
 }
 
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+.title-2 {
+    font-size: var(--titleSize-2);
 }
 
-img {
-    max-width: 100%;
+.text-1 {
+    font-size: var(--textSize);
+    font-weight: 400;
+    padding-bottom: 15px;
 }
 
-a {
-    text-decoration: none;
-    color: var(--fontColor);
+.text-2{
+    font-size:var(--textSize-2);
+    font-weight:400;
 }
 
-ul {
-    list-style: none;
+.text-shadow{
+    text-shadow:1px 1px 2px #222;
 }
 
-h1,
-h2,
-h3,
-p {
-    margin: 10px 0;
+.bold{
+    font-weight:bold;
 }
 
-
-/********************Utilities**********************/
-
-.box-shadow{
-    box-shadow:2px 2px 10px #aaa;
+.white {
+    color: #fff;
 }
 
-.container {
-    position: relative;
-    max-width: 1406px;
-    padding: 0 20px;
-    margin: auto;
-    height: 100%;
-}
+/*************Flex styling***************/
 
 .flex {
     display: flex;
@@ -81,14 +71,12 @@ p {
     min-width: 330px;   
 }
 
-.img-cover img{
-    width:100%;
-    height:100%;
-    object-fit:cover;
+.nav .flex {
+    justify-content: space-between;
 }
-.img-cover{
-    height:500px;
-}
+
+
+/*************Grid styling***************/
 
 .grid {
     display: grid;
@@ -97,42 +85,27 @@ p {
     grid-gap: 20px;
 }
 
-.white {
-    color: #fff;
+/*************Img styling*************/
+
+.img-cover img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
 }
 
-.nav .flex {
-    justify-content: space-between;
+.img-cover{
+    height:500px;
 }
 
-.btn {
-    padding: 15px 75px;
-    border: none;
-    border-radius: 4px;
-    font-size: 1.2rem;
-    cursor: pointer;
-    transition: background-color ease-in-out .3s;
-}
 
-.btn-outline-white {
-    background-color: transparent;
-    border: 2px solid #fff;
-    color: #fff;
-}
+/**************Layout and spacing styling***************/
 
-.btn-primary {
-    background-color: var(--primaryBlue);
-    color: #fff;
-    margin-top: 30px;
-}
-
-.btn-primary:hover {
-    background-color: #0bafc2;
-}
-
-.btn-outline-white:hover {
-    background-color: #fff;
-    color: var(--fontColor);
+.container {
+    position: relative;
+    max-width: 1406px;
+    padding: 0 20px;
+    margin: auto;
+    height: 100%;
 }
 
 .padding {
@@ -145,7 +118,6 @@ p {
 
 .my-4 {
     width: 220px;
-    margin: auto;
     margin-bottom: 60px;
     margin-top: 20px;
     border: 2.5px solid #0BCADE;
@@ -159,28 +131,8 @@ p {
     text-align: center;
 }
 
-.title {
-    font-size: var(--titleSize);
-    line-height: 1;
-}
-
-.title-2 {
-    font-size: var(--titleSize-2);
-}
-
-.text-1 {
-    font-size: var(--textSize);
-    font-weight: 400;
-    font-size: 1.2rem;
-    padding-bottom: 15px;
-}
-
 .pt-15 {
     padding-top: 15px;
-}
-
-.text-shadow {
-    
 }
 
 .vertical-center {
@@ -189,27 +141,37 @@ p {
     transform: translateY(-50%);
 }
 
-.bold{
-    font-weight:bold;
+/*****************Box and button styling*****************/
+
+.box-shadow{
+    box-shadow:2px 2px 15px #555;
+}
+
+.btn {
+    padding: 12px 40px;
+    border: none;
+    border-radius: 4px;
+    font-size: 1.2rem;
+    cursor: pointer;
+    transition: background-color ease-in-out .3s;
+}
+
+.btn-primary {
+    background-color: var(--primaryBlue);
+    color: #fff;
+}
+
+.btn-primary:hover {
+    background-color: var(--primaryBlueHover);
 }
 
 .bk-white{
     background-color:#fff;
-    
 }
 
 .br-12{
     border-radius:12px;
 }
-
-
-/*******************Body syling***********************/
-
-body {
-    font-family: 'Poppins', sans-serif;
-    color: var(--fontColor);
-}
-
 
 /**********************Navbar************************/
 
@@ -268,6 +230,22 @@ body {
     visibility: visible;
     transform: scaleX(1);
 } 
+
+.nav__hamburger {
+    display: none;
+    cursor: pointer;
+    height: 40px;
+}
+
+.nav__hamburger:hover {
+    transform: scale(1.1);
+}
+
+.nav__hamburger img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 /*********************Carousel**********************/
 
@@ -358,10 +336,6 @@ body {
     width: 50%;
 }
 
-.carousel__container-inner .btn {
-    margin-top: 30px;
-}
-
 .carousel__caption .container {
     padding: 0 100px;
     max-width: 1560px;
@@ -374,102 +348,12 @@ body {
 }
 
 
-/****************Two columns welcome section***************/
-
-.welcome .flex {
-    flex-wrap: wrap-reverse;
-}
-.welcome__image img{
-    width:100%;
-    height:100%;
-    object-fit:cover;
-}
-.welcome__image{
-    height:500px;
-}
-
-/*****************Three column section cards******************/
-
-.disocveries {
-    background-color: #efefef;
-    padding-bottom: 100px;
-}
-
-.card {
-    background-color: #fff;
-    border: 1px solid #888;
-}
-
-.card__text {
-    font-size: 14px;
-}
-
-
-.card__body img{
-    width:100%;
-}
-
-.card__footer {
-    padding: 0 25px;
-}
-
-.nav__hamburger {
-    display: none;
-    cursor: pointer;
-    height: 40px;
-}
-
-.nav__hamburger:hover {
-    transform: scale(1.1);
-}
-
-.nav__hamburger img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-
-/****************Fixed background*****************/
-
-.fixed-background {
-    height: 265px;
-    position: relative;
-}
-
-.content {
-    width: 100%;
-    text-align: center;
-}
-
-.mask {
-    background-color: rgba(220, 220, 220, .85);
-    width: 100%;
-    height: 100%;
-}
-
-.background {
-    background-image: url(../img/micro.jpg);
-    background-attachment: fixed;
-    background-size:cover;
-    background-position:center;
-    height: 100%;
-    width:100%;
-}
-
-
-@media screen and (max-width:1406px){
- .news__img{
-     
- }   
-}
-
 /********************Footer************************/
 
 .footer{
     
-    background-color:#043439;
-    color:#fff;
+    background-color:#f7f7f7;
+    color:var(--fontColor);
     padding-top:70px;
 }
 
@@ -484,8 +368,7 @@ padding-bottom:35px;
 }
 
 .subfooter{
-    background-color:#043439;
-    border-top:1px solid #fafafa;
+    border-top:2px solid var(--primaryBlue);
     padding:30px;
 }
 
@@ -504,7 +387,7 @@ padding-bottom:35px;
     margin:0 10px;
 }
 
-
+/*****************Media query 1070px******************/
 
 @media screen and (max-width:1070px) {
     .title{
@@ -520,6 +403,8 @@ padding-bottom:35px;
         gap:40px;
     }
 }
+
+/******************Media query 834px******************/
 
 @media screen and (max-width:834px){
     .footer .grid {
@@ -606,9 +491,5 @@ padding-bottom:35px;
     .carousel__slide img {
         filter: brightness(.6);
     }
-    
-}
-
-@media screen and (max-width:550px) {
     
 }
