--- a/css/utilities/utilities.css
+++ b/css/utilities/utilities.css
@@ -148,12 +148,13 @@
 }
 
 .btn {
-    padding: 12px 40px;
+    padding: 10px 35px;
     border: none;
     border-radius: 4px;
     font-size: 1.2rem;
     cursor: pointer;
     transition: background-color ease-in-out .3s;
+    display:inline-block;
 }
 
 .btn-primary {
@@ -365,6 +366,9 @@
 
 .grid-item{
 padding-bottom:35px;
+display:flex;
+justify-content: center;
+align-items: center;
 }
 
 .subfooter{
