Fixed some things

--- a/css/home.css
+++ b/css/home.css
@@ -61,9 +61,27 @@ Note: To see navbar, footer and reusable blocs see utilities.css
     position: relative;
 }
 
-.content {
-    width: 100%;
-    text-align: center;
+.fixed-background .flex{
+    justify-content: space-between;
+}
+
+.fixed-background__content {
+    width:100%;
+}
+
+.fixed-background__container{
+    width:100%;
+}
+
+.fixed-background__image{
+    width:270px;
+    height:270px;
+}
+
+.fixed-background__image img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
 }
 
 .mask {
