--- a/css/utilities/utilities.css
+++ b/css/utilities/utilities.css
@@ -214,7 +214,9 @@
     position:relative;
 }
 
-.nav__link:after{
+
+
+.nav__link:after, .nav__active:after{
     content: "";
     position: absolute;
     width: 100%;
@@ -227,7 +229,7 @@
     transition: .25s linear;
 }
 
-.nav__link:hover:after{
+.nav__link:hover:after, .nav__active:after{
     visibility: visible;
     transform: scaleX(1);
 } 
