--- a/css/utilities/utilities.css
+++ b/css/utilities/utilities.css
@@ -158,7 +158,8 @@
 }
 
 .btn-primary {
-    background-color: var(--primaryBlue);
+    background:linear-gradient(to right, #6ddbe7, #d972e1);
+    /*background-color: var(--primaryBlue);*/
     color: #fff;
 }
 
@@ -175,12 +176,15 @@
 }
 
 /**********************Navbar************************/
-
-.nav {
+.header{
     position: sticky;
     top: 0;
     z-index: 5;
     height: 80px;
+}
+
+.nav {
+    height:100%;
     background-color: var(--transparentWhite);
     box-shadow: 2px 2px 3px #666;
 }
@@ -356,6 +360,7 @@
     background-color:#f7f7f7;
     color:var(--fontColor);
     padding-top:70px;
+    margin-top:70px;
 }
 
 .footer .grid{
